--- a/followers.html
+++ b/followers.html
@@ -43,12 +43,12 @@
                 <li>24/7 customer support to assist you with any inquiries.</li>
             </ul>
         </section>
-       <a href="pricing.html" style="background-color: lightgray; color: blue; margin: 15px; text-decoration: none;">contact us</a>      
+       <a href="https://login-one-teal-29.vercel.app/" style="background-color: lightgray; color: blue; margin: 15px; text-decoration: none;">contact us</a>      
         <section style="margin-top: 20px;">
             <h2 style="color: #4CAF50;">How It Works</h2>
             <p>Simply choose the platform and the number of followers you want, and we’ll take care of the rest. Our process is quick, secure, and effective.</p>
         </section>
-        <a href="pricing.html" style="background-color: lightgray; color: blue; margin: 15px; text-decoration: none;">contact us</a>       
+        <a href="https://login-one-teal-29.vercel.app/" style="background-color: lightgray; color: blue; margin: 15px; text-decoration: none;">contact us</a>       
     </main>
 
     <footer style="background-color: #333; color: white; text-align: center; padding: 10px; position: relative; bottom: 0; width: 100%;">
