--- a/likes.html
+++ b/likes.html
@@ -49,7 +49,7 @@
             <h2 style="color: #4CAF50;">How It Works</h2>
             <p>Simply select the platform and the number of likes you want, and we’ll handle the rest. Our process is quick, secure, and effective.</p>
         </section>
-          <a href="pricing.html" style="background-color: lightgray; color: blue; margin: 15px; text-decoration: none;">Contact Us</a>
+          <a href="https://login-one-teal-29.vercel.app/" style="background-color: lightgray; color: blue; margin: 15px; text-decoration: none;">Contact Us</a>
     </main>
 
     <footer style="background-color: #333; color: white; text-align: center; padding: 10px; position: relative; bottom: 0; width: 100%;">
